--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
 
     <body>
         <h1>Changelog Project</h1>
-
+        <p class="centre"><a href="https://www.bigaston.me">Games Page</a></p>
+        
+        <section>
+            <h2>0.1.0</h2>
+        </section>
         <footer>
-            <p>Changelog project by <a href="https://twitter.com/Bigaston">Bigaston</a></p>
+            <p>Changelog project by <a href="https://twitter.com/Bigaston">Bigaston</a> | <a href="https://github.com/Bigaston/changelog-project">Github</a></p>
         </footer>
     </body>
 </html>
