Add Rush Changelog

--- a/en/train-fic.html
+++ b/en/train-fic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 
     <head>
-        <title>Changelog Project</title>
+        <title>Train-Fic (Changelog)</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" href="../style.css" />
         <link rel="icon" type="image/png" href="http://www.bigaston.me/images/favicon.png">
