--- a/en/rush.html
+++ b/en/rush.html
@@ -37,6 +37,18 @@
         </nav> -->
 
         <section>
+            <h2 id="0.4.0">0.4.0</h2>
+            <ul>
+                <li>Add the level exporter in level editor</li>
+                <li>Add the level loader function in level editor</li>
+                <li>Add the rubber in level editor</li>
+                <li>Change the right click utils, now you can copy the selected tile to use it directly</li>
+            </ul>
+            
+            <p class="date">04/13/2018</p>
+        </section>
+        
+        <section>
             <h2 id="0.3.1">0.3.1</h2>
             <ul>
                 <li>Correct in the level 7</li>
