--- a/fr/rush.html
+++ b/fr/rush.html
@@ -37,6 +37,18 @@
         </nav> -->
 
         <section>
+            <h2 id="0.4.0">0.4.0</h2>
+            <ul>
+                <li>Ajout de l'exportation de niveau dans l'éditeur de niveaux</li>
+                <li>Ajout du chargement de niveau dans l'éditeur de niveaux</li>
+                <li>Ajout de la gomme dans l'éditeur de niveaux</li>
+                <li>Changement du click droit, il selectionne le sprite de la case sélectionnée pour l(utiliser plus facilement</li>
+            </ul>
+            
+            <p class="date">04/13/2018</p>
+        </section>
+        
+        <section>
             <h2 id="0.3.1">0.3.1</h2>
             <ul>
                 <li>Correction du niveau 7</li>
