--- a/fr/rush.html
+++ b/fr/rush.html
@@ -42,7 +42,7 @@
                 <li>Ajout de l'exportation de niveau dans l'éditeur de niveaux</li>
                 <li>Ajout du chargement de niveau dans l'éditeur de niveaux</li>
                 <li>Ajout de la gomme dans l'éditeur de niveaux</li>
-                <li>Changement du click droit, il selectionne le sprite de la case sélectionnée pour l(utiliser plus facilement</li>
+                <li>Changement du click droit, il selectionne le sprite de la case sélectionnée pour l'utiliser plus facilement</li>
             </ul>
             
             <p class="date">04/13/2018</p>
