--- a/en/rush.html
+++ b/en/rush.html
@@ -37,6 +37,15 @@
         </nav> -->
 
         <section>
+            <h2 id="0.5.0">0.5.0</h2>
+            <ul>
+                <li>Add the level Player on the normal and demo version</li>
+            </ul>
+            
+            <p class="date">04/26/2018</p>
+        </section>
+        
+        <section>
             <h2 id="0.4.0">0.4.0</h2>
             <ul>
                 <li>Add the level exporter in level editor</li>
